# prompt-passage

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tasks.py
.github/workflows/: build-test.yml  docker-image.yml  dockerhub-release.yml  python-publish.yml
src/local_llm_proxy/: config.py  forwarder.py  proxy_app.py  schemas.py  token_providers.py
src/prompt_passage/: cli.py  config.py  proxy_app.py
tests/: test_api.py  test_config.py  test_token_provider.py
tests/functional/: local-test.py  local-test.sh  run_pkg.sh  test_stream.py
tests/unit/: test_api.py  test_cli.py  test_config.py
