[tool.poetry]
name = "local-llm-proxy"
description = "local-llm-proxy"
requires-python = ">=3.12"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
files = ["core"]
strict = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
pythonpath = [
  "src",
  "src/local_llm_proxy"
]